# CapstoneScraper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  aldi.csv  config.ini  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  service_script.conf
core/: main.py  requirements.txt
core/scrapers/: aldi_scraper.py  edeka_scraper.py  rewe_scraper.py  scrapers.py
data/: aldi.csv  edeka.csv  rewe.csv
tests/: sample_page.html  sample_page.json  test_edeka_scraper.py  test_rewe_scraper.py  test_scraper.py
