[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Scraping framework for websites and whatsapp"
authors = ["Divinefavour Odion <dodion@jacobs-university.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
pyupgrade = "^3.3.1"
autoflake = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
